Allmost doen, some bugs left

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -30,3 +30,4 @@ FLIPPER_VERSION=0.54.0
 APP_RELEASE_STORE_PASSWORD=azSdnjed12kmk
 APP_RELEASE_KEY_ALIAS=release
 APP_RELEASE_KEY_PASSWORD=azSdnjed12kmk
+org.gradle.jvmargs=-Xmx4608m
