--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-actionsheet": "^2.4.2",
     "react-native-date-picker": "^3.3.2",
     "react-native-extended-stylesheet": "^0.12.0",
+    "react-native-fs": "^2.18.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.2",
     "react-native-navigation": "^6.11.0",
     "react-native-notifications": "^3.3.4",
